@@ -1,99 +1,0 @@
-.LL 8i
-.TH vdeldomain 1
-.SH NAME
-vdeldomain \- Delete a virtual domain
-
-.SH SYNOPSYS
-.B vdeldomain
-[
-.I cTvV
-]
-.I domain_name
-
-.SH DESCRIPTION
-.PP
-.B vdeldomain
-Completely removes a virtual domain from the system. It deletes all qmail files for
-the domain and removes all email users and their directories.
-For a clustered domain, \fBvdeldomain\fR should be run on the host having the
-postmaster account. \fBvdeldomain\fR has setuid bit set and runs as root.
-
-.PP
-For real domain, it does the following
-.PP
-.nr step 1 1
-.IP \n[step] 3
-Delete all domains aliased to the real domain being removed (from the file .aliasdomains)
-.IP \n+[step]
-Remove entry for real domain in qmail assign file
-.IP \n+[step]
-Recursively remove directories in all filesystems pertaining to the real domain.
-.IP \n+[step]
-Remove entries in dir_control tables pertaining to the real domain.
-.IP \n+[step]
-Remove the Domain directory
-.IP \n+[step]
-Remove all entries for domain in tables indimail and indibak.
-.IP \n+[step]
-Remove entries for domain in rcpthosts, morercpthosts, virtualdomains, chkrcptdomains
-.IP \n+[step]
-Remove entry from table dbinfo and mcdfile for a clustered domain.
-.IP \n+[step]
-Send SIGHUP to qmail-send
-
-.PP
-For alias domains, it does the following
-.PP
-.nr step 1 1
-.IP \n[step] 3
-Delete entry from aliasdomain table on the Control Host.
-.IP \n+[step]
-Remove entry from .aliasdomains
-.IP \n+[step]
-Remove entry for alias domain in qmail assign file
-.IP \n+[step]
-Recursively remove directories in all filesystems pertaining to the real domain.
-.IP \n+[step]
-Remove entries in dir_control tables pertaining to the alias  domain.
-.IP \n+[step]
-Remove the Domain directory (symbolic link)
-.IP \n+[step]
-Remove all entries for domain in tables indimail and indibak.
-.IP \n+[step]
-Remove entries for domain in rcpthosts, morercpthosts, virtualdomains
-.IP \n+[step]
-Send SIGHUP to qmail-send
-
-.PP
-For domain with AUTOTURN support, it does the following
-.PP
-.nr step 1 1
-.IP \n[step] 3
-Recursively remove Maildir for the domain
-.IP \n+[step]
-Remove entries for domain in rcpthosts, morercpthosts, virtualdomains and etrnhosts.
-.IP \n+[step]
-Send SIGHUP to qmail-send
-
-.SH OPTIONS
-.TP
-\fB\-v\fR
-Print verbose messages on the screen.
-.TP
-\fB\-V\fR
-Prints version numbers.
-.TP
-\fB\-T\fR
-Deletes a domain enabled with AUTOTURN support.
-.TP
-\fB\-c\fR
-Deletes a domain information from dbinfo table as well.
-.TP
-\fIdomain_name\fR
-The domain name to remove. 
-
-.SH RETURN VALUE
-0 if all steps were successful, non-zero otherwise. If any of the steps fail, a diagnostic message is printed.
-
-.SH "SEE ALSO"
-vadddomain(1), vaddaliasdomain(1), vmoddomain(1), vadduser(1), vdeluser(1), vdominfo(1), dbinfo(8)
